@@ -1,7 +1,7 @@
 Package: Rcpp
 Title: Seamless R and C++ Integration
-Version: 1.0.8.2
-Date: 2022-03-10
+Version: 1.0.8.3
+Date: 2022-03-13
 Author: Dirk Eddelbuettel, Romain Francois, JJ Allaire, Kevin Ushey, Qiang Kou,
  Nathan Russell, Inaki Ucar, Douglas Bates and John Chambers
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
@@ -23,6 +23,6 @@ BugReports: https://github.com/RcppCore/Rcpp/issues
 MailingList: rcpp-devel@lists.r-forge.r-project.org
 RoxygenNote: 6.1.1
 NeedsCompilation: yes
-Packaged: 2022-03-11 14:27:34 UTC; edd
+Packaged: 2022-03-13 17:40:34 UTC; edd
 Repository: CRAN
-Date/Publication: 2022-03-11 23:10:14 UTC
+Date/Publication: 2022-03-17 08:30:10 UTC
