@@ -1,5 +1,5 @@
-b33fe62c268d21b48dbbec7e781bb14d *ChangeLog
-d8ebadce5e7a365ed67c27bbd76fc864 *DESCRIPTION
+40deb63f98b86614e0cfc82b9ef145d1 *ChangeLog
+2eebcfe852619264fea922570ce089a7 *DESCRIPTION
 f53ecd48407d7485920c4f3caaf187e0 *NAMESPACE
 ad57518c2d1d3d66fc26b6c214ed13e1 *R/00_classes.R
 f9a4ffb4d0fcec3eec6ef6c229ff1bba *R/01_show.R
@@ -22,11 +22,11 @@ a7677d0b8631d443c4ad44014780439b *R/tools.R
 e82268e95d8f2d3a1759620eb1bc6664 *R/zzz.R
 7cf2cb0addd0f0180a52d01a22ce1e01 *README.md
 dcfe968628d24168fc5bb54a66631158 *TODO
-c1363248ef3b51b08be4d7d5fd06b6da *build/partial.rdb
-99c1aabd38e9625637914d6f2f36775b *build/vignette.rds
+dc0ce9cd5bb7836f060e7d58047445fa *build/partial.rdb
+246ac8f9e83d88d4eab837ad8197a258 *build/vignette.rds
 c1fc6087257d5e64ae088036c4d5a060 *cleanup
 4dfa3723ed669b83c2160648bb4e874a *inst/CITATION
-fc5a4d0b347ab92007b5f2fa1a27f190 *inst/NEWS.Rd
+fb1e2676b57a5915def1408c79b6cab5 *inst/NEWS.Rd
 7a9967333ad85931cc6d2051f4dff76e *inst/announce/ANNOUNCE-0.10.0.txt
 734d037a2ac31af4659fb3b2e1a778ad *inst/announce/ANNOUNCE-0.11.0.txt
 7d85af8d096e473821a3f001d3128b01 *inst/announce/ANNOUNCE-0.6.0.txt
@@ -36,25 +36,25 @@ a198e05a9b004dfc1f8ea67629f2f6c7 *inst/announce/ANNOUNCE-0.8.0.txt
 09e2851430cbd92f01c72442e4c5db37 *inst/bib/Rcpp.bib
 6f1e3b1f4f75e04af65bb9daf94e9630 *inst/discovery/cxx0x.R
 2baf167ce452976b0fcb43e44f566af7 *inst/doc/Rcpp-FAQ.Rnw
-609420e0bd51b8dd82a847bb4557d299 *inst/doc/Rcpp-FAQ.pdf
+d216d9038788f360ba1eb20e13a8ef4a *inst/doc/Rcpp-FAQ.pdf
 887250b7e0675b4a70d6eb1a4689080c *inst/doc/Rcpp-attributes.Rnw
-b12886f1cac5b728f9cbc895911fb265 *inst/doc/Rcpp-attributes.pdf
+f2ba009651e2b7293ae2a3f88afb7e34 *inst/doc/Rcpp-attributes.pdf
 37f50a136d1350e8e864c9265cc88ad8 *inst/doc/Rcpp-extending.Rnw
-9f0509cccd3ecf369797d793b189d5ee *inst/doc/Rcpp-extending.pdf
+c704d4be5105e77d699bc7f39a6e3289 *inst/doc/Rcpp-extending.pdf
 90eade7bfffa82f250510759bc9a7f36 *inst/doc/Rcpp-introduction.Rnw
-2624cc85805075c1e35f6e7334df910f *inst/doc/Rcpp-introduction.pdf
+a17ccb338f19f48fb23808c2f4e55705 *inst/doc/Rcpp-introduction.pdf
 e6cf1d12ce4e3a2fed6eddf6290d393f *inst/doc/Rcpp-jss-2011.Rnw
-50ef21f744e8486dbddee3e5ac757f35 *inst/doc/Rcpp-jss-2011.pdf
+8c5e931bd042330d02b601a777697529 *inst/doc/Rcpp-jss-2011.pdf
 4524c2761e07e170f681181c2e62eb05 *inst/doc/Rcpp-libraries.Rnw
-49aef9953dc80cbe43b736de21f34078 *inst/doc/Rcpp-libraries.pdf
+73601ef8d2cd2bdb42404ee551eb31f2 *inst/doc/Rcpp-libraries.pdf
 a96bcf4153b795bff19ddc36a17ca435 *inst/doc/Rcpp-modules.Rnw
-3e941f32ec21be171c35dd8cd4f74c78 *inst/doc/Rcpp-modules.pdf
+e695d7a1fb0f4de6ad9eef2ab39b8756 *inst/doc/Rcpp-modules.pdf
 835d0e2dd365e4621663bd03ae219758 *inst/doc/Rcpp-package.Rnw
-a9519fbb3efd7ff1ef0832430af19307 *inst/doc/Rcpp-package.pdf
+cdafeb430d5f6f139344b91d57bf9db8 *inst/doc/Rcpp-package.pdf
 d76adfdc4e68c69c5ff632e234db6a85 *inst/doc/Rcpp-quickref.Rnw
-c00cb1546fc1341b972bbb2220f83c59 *inst/doc/Rcpp-quickref.pdf
+0d6990fd55b46698084c7e3c76ffe61e *inst/doc/Rcpp-quickref.pdf
 929a1aad762b7354b6875a35093ec477 *inst/doc/Rcpp-sugar.Rnw
-98bf10b664910f0ae3f5b38d91c08be9 *inst/doc/Rcpp-sugar.pdf
+a58d50c5386adb5c18542b06af1255e2 *inst/doc/Rcpp-sugar.pdf
 35fa971232b8c9fb0bbb9dfc2ad3de7a *inst/examples/Attributes/Depends.cpp
 a9aa3aceea0b49525155a2c43296318b *inst/examples/Attributes/Export.cpp
 c6c9969e0067a1321827369cba1cc566 *inst/examples/Attributes/cppFunction.R
@@ -178,7 +178,7 @@ c9af45da88ea151bb2f8cd27900257e8 *inst/include/Rcpp/api/meat/proxy.h
 90c153091bc3fb1e123fef9dc40394e6 *inst/include/Rcpp/barrier.h
 fa7b26bbe19f908b9c00ead2fe2717ac *inst/include/Rcpp/clone.h
 1b3b2bee1fc9bd3f231c2a33ca572281 *inst/include/Rcpp/complex.h
-8190e91b1b67d7d3a5d9472fbfe15840 *inst/include/Rcpp/config.h
+34edd8708d1bb4db4dc80adc4c4d6958 *inst/include/Rcpp/config.h
 b90e19134c5d4a4c0652f956c022d1e4 *inst/include/Rcpp/date_datetime/Date.h
 e75130fc77dac6243e5c88639c940dea *inst/include/Rcpp/date_datetime/Datetime.h
 0d754f1a9266c3e1bbc6946ba1304ab5 *inst/include/Rcpp/date_datetime/date_datetime.h
@@ -699,7 +699,7 @@ d6acc93978c28168b02c446d36ae9335 *src/barrier.cpp
 eef4c2f0e1abd787b8fd62d289ed5961 *src/internal.h
 4eeaedc1e555103025f1feeaee299538 *src/module.cpp
 545982e58b067742919490cc23d62905 *src/rcpp_init.cpp
-bff03a0120b933443456f83adf0ca386 *tests/tinytest.R
+bfc214bd014e5ad46ec624ac43185b01 *tests/tinytest.R
 2baf167ce452976b0fcb43e44f566af7 *vignettes/Rcpp-FAQ.Rnw
 887250b7e0675b4a70d6eb1a4689080c *vignettes/Rcpp-attributes.Rnw
 37f50a136d1350e8e864c9265cc88ad8 *vignettes/Rcpp-extending.Rnw
